# SailingComputer

./: .gitignore  CMakeLists.txt  README.md  flash.sh  partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.esp32dev  sdkconfig.esp32p4
certs/: cert.pem  key.pem
src/: CMakeLists.txt  ble_nmea.h  certs.h  config.h  crewui.h  gpx.h  idf_component.yml  main.cpp  storage.h  track.h  um982.h  version.h  webui.h
